Simplify TextField and handling of saving TextField content to file

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
 /build
 /captures
@@ -16,3 +17,4 @@ local.properties
 /app/release/bundletool-all-1.15.1.jar
 /app/release/app-release.aab
 /app/release/BeauTyXT-release.apks
+/app/release/output-metadata.json
