Show user accept privacy policy and license at first start and must accept to use the app.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ local.properties
 /app/release/app-release.aab
 /app/release/BeauTyXT-release.apks
 /app/release/output-metadata.json
+/app/release/app-release.apk
