Markdown rendering support

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
                 <data android:scheme="content"/>
                 <data android:mimeType="application/xml"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="content"/>
+                <data android:mimeType="text/markdown"/>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
