--- a/.github/workflows/gradle-dependency-submission.yml
+++ b/.github/workflows/gradle-dependency-submission.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Run snapshot action
         uses: mikepenz/gradle-dependency-submission@v0.9.0
         with:
-          gradle-project-path: "."
+          gradle-project-path: "./"
           gradle-build-module: ":app"
