--- a/.github/workflows/gradle-dependency-submission.yml
+++ b/.github/workflows/gradle-dependency-submission.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Run snapshot action
         uses: mikepenz/gradle-dependency-submission@v0.9.0
         with:
-          gradle-project-path: "./"
+
+ 
+          sub-module-mode: INDIVIDUAL_DEEP
           gradle-build-module: ":app"
+l
