--- a/.github/workflows/gradle-dependency-submission.yml
+++ b/.github/workflows/gradle-dependency-submission.yml
@@ -14,14 +14,11 @@ jobs:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
 
-      - name: 'List files in workspace'
-        run: ls -la
-      
+      - name: 'Grant execute permissions for gradlew'
+        run: chmod +x gradlew
+
       - name: Run snapshot action
         uses: mikepenz/gradle-dependency-submission@v0.9.0
         with:
-
- 
-          sub-module-mode: INDIVIDUAL_DEEP
+          gradle-project-path: "./"
           gradle-build-module: ":app"
-
