--- a/.github/workflows/gradle-dependency-submission.yml
+++ b/.github/workflows/gradle-dependency-submission.yml
@@ -14,6 +14,12 @@ jobs:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
 
+      - name: 'Set up JDK 17'
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
       - name: 'Grant execute permissions for gradlew'
         run: chmod +x gradlew
 
@@ -22,3 +28,4 @@ jobs:
         with:
           gradle-project-path: "./"
           gradle-build-module: ":app"
+          sub-module-mode: INDIVIDUAL_DEEP
