Add <action android:name="android.intent.action.EDIT"/> to open file intent filters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,28 +18,33 @@
             android:exported="true"
             android:theme="@style/Theme.beautyxt">
             <intent-filter>
+                <action android:name="android.intent.action.EDIT"/>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
+                <action android:name="android.intent.action.EDIT"/>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:scheme="content"/>
                 <data android:mimeType="text/plain"/>
             </intent-filter>
             <intent-filter>
+                <action android:name="android.intent.action.EDIT"/>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:scheme="content"/>
                 <data android:mimeType="application/json"/>
             </intent-filter>
             <intent-filter>
+                <action android:name="android.intent.action.EDIT"/>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:scheme="content"/>
                 <data android:mimeType="application/xml"/>
             </intent-filter>
             <intent-filter>
+                <action android:name="android.intent.action.EDIT"/>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:scheme="content"/>
