--- a/beautyxt_rs/Cargo.toml
+++ b/beautyxt_rs/Cargo.toml
@@ -8,10 +8,10 @@ license = "ISC"
 
 [dependencies]
 markdown = "1.0.0-alpha.11"
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "53d5ac7" }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5598e0b6070eabc74cc1a3c8cafedd592e4a569f" }
 
 [build-dependencies]
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "53d5ac7", features = ["build"] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "5598e0b6070eabc74cc1a3c8cafedd592e4a569f", features = ["build"] }
 
 [lib]
 crate-type = ["cdylib"]
@@ -19,3 +19,8 @@ crate-type = ["cdylib"]
 [[bin]]
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
