--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 app/src/main/assets/beautyxt_rs-third-party-licenses.html linguist-detectable=false
+beautyxt_rs/about.hbs linguist-detectable=false
