--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ local.properties
 /app/release/bundletool-all-1.15.2.jar
 /app/release/BeauTyXT-app-release.apks
 /app/release/bundletool-all-1.15.4.jar
+app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs.so
