--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ local.properties
 /app/release/BeauTyXT-app-release.apks
 /app/release/bundletool-all-1.15.4.jar
 app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs.so
+app/src/main/jniLibs/x86_64/libbeautyxt_rs.so
