Update useful-commands.txt and add new profile

--- a/beautyxt_rs/Cargo.toml
+++ b/beautyxt_rs/Cargo.toml
@@ -23,6 +23,12 @@ crate-type = ["cdylib"]
 name = "uniffi-bindgen"
 path = "uniffi-bindgen.rs"
 
+[profile.release-dev]
+inherits = "release"
+strip = false
+lto = false
+codegen-units = 16
+
 [profile.release]
 strip = true
 lto = "fat"
