--- a/beautyxt_rs/Cargo.toml
+++ b/beautyxt_rs/Cargo.toml
@@ -7,14 +7,20 @@ license-file = "./LICENSE.txt"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+comemo = "0.3.0"
 docx-rs = "0.4.7"
 ego-tree = "0.6.2"
+libc = "0.2.149"
 markdown = "1.0.0-alpha.14"
+once_cell = "1.18.0"
 scraper = "0.17.1"
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "48b1f51f6e5406cab20f502f535b30a589a5b140" }
+thiserror = "1.0.50"
+typst = { git = "https://github.com/typst/typst", version = "0.9.0", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
+typst-library = { git = "https://github.com/typst/typst", version = "0.9.0", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
+uniffi = "0.25.0"
 
 [build-dependencies]
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "48b1f51f6e5406cab20f502f535b30a589a5b140", features = ["build"] }
+uniffi = { version = "0.25.0", features = ["build"] }
 
 [lib]
 crate-type = ["cdylib"]
