--- a/beautyxt_rs/Cargo.toml
+++ b/beautyxt_rs/Cargo.toml
@@ -7,6 +7,7 @@ license-file = "./LICENSE.txt"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 comemo = "0.3.0"
 docx-rs = "0.4.7"
 ego-tree = "0.6.2"
