--- a/beautyxt_rs/.cargo/config.toml
+++ b/beautyxt_rs/.cargo/config.toml
@@ -11,3 +11,9 @@ linker = "C:/Users/user/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/l
 rustflags = [
     "-C", "link-arg=-Wl,-z,pack-relative-relocs,",  # Reduces size by ~1 MB
 ]
+
+[env]
+CC_aarch64-linux-android = "C:/Users/user/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/windows-x86_64/bin/aarch64-linux-android23-clang.cmd"
+CC_x86_64-linux-android = "C:/Users/user/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/windows-x86_64/bin/x86_64-linux-android23-clang.cmd"
+AR_aarch64_linux_android = "C:/Users/user/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/windows-x86_64/bin/llvm-ar.exe"
+AR_x86_64_linux_android = "C:/Users/user/AppData/Local/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/windows-x86_64/bin/llvm-ar.exe"
