--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ app/src/main/jniLibs/x86_64/libbeautyxt_rs.so
 /app/release/bundletool-all-1.15.5.jar
 app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs_compressed.so
 beautyxt_rs/upx.exe
+/app/release/apk/release/app-release.apk
+/app/release/apk/release/output-metadata.json
