--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs_compressed.so
 beautyxt_rs/upx.exe
 /app/release/apk/release/app-release.apk
 /app/release/apk/release/output-metadata.json
+/app/release/apk/release/beautyxt-0.17.0.apk
