Remove Deep Links and use alternate approach to allow going back to app that opened the activity when pressing back

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name="dev.soupslurpr.beautyxt.MainActivity"
             android:exported="true"
+            android:documentLaunchMode="intoExisting"
             android:theme="@style/Theme.beautyxt">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
