--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:enableOnBackInvokedCallback="true"
         android:memtagMode="async"
         tools:targetApi="34">
+        <service
+            android:name=".ui.FileViewModelRustLibraryIsolatedService"
+            android:exported="false"
+            android:isolatedProcess="true"
+            android:process=":file_view_model_rust_library_isolated_process"></service>
         <activity
             android:name="dev.soupslurpr.beautyxt.MainActivity"
             android:exported="true"
