Run Typst Rust library in isolated process and more
Also splits the libraries in two, one for text and markdown, and one for typst.

Some misc improvements and dependency bumps too also

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             android:exported="false"
             android:isolatedProcess="true"
             android:process=":file_view_model_rust_library_isolated_process"></service>
+        <service
+            android:name=".ui.TypstProjectViewModelRustLibraryIsolatedService"
+            android:exported="false"
+            android:isolatedProcess="true"
+            android:process=":typst_project_view_model_rust_library_isolated_process"></service>
         <activity
             android:name="dev.soupslurpr.beautyxt.MainActivity"
             android:exported="true"
