--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ beautyxt_rs/upx.exe
 /app/release/apk/release/app-release.apk
 /app/release/apk/release/output-metadata.json
 /app/release/apk/release/beautyxt-0.17.0.apk
+/app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs_plain_text_and_markdown.so
+/app/src/main/jniLibs/x86_64/libbeautyxt_rs_plain_text_and_markdown.so
+/app/src/main/jniLibs/x86_64/libbeautyxt_rs_typst.so
+/app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs_typst.so
+/beautyxt_rs_plain_text_and_markdown/upx.exe
