--- a/beautyxt_rs_typst/Cargo.toml
+++ b/beautyxt_rs_typst/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "beautyxt_rs"
+name = "beautyxt_rs_typst"
 version = "0.1.0"
 edition = "2021"
 license-file = "./LICENSE.txt"
@@ -9,21 +9,17 @@ license-file = "./LICENSE.txt"
 [dependencies]
 chrono = "0.4.31"
 comemo = "0.3.1"
-docx-rs = "0.4.7"
-ego-tree = "0.6.2"
 libc = "0.2.152"
-markdown = "1.0.0-alpha.16"
 once_cell = "1.19.0"
-scraper = "0.18.1"
 thiserror = "1.0.56"
 typst = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
 typst-pdf = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
 typst-svg = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
 typst-render = { git = "https://github.com/typst/typst", version = "0.10.0", rev = "70ca0d257bb4ba927f63260e20443f244e0bb58c" }
-uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "fb8dd5c0f9406ea558d0d9d86804f4688ae95e44", version = "0.25.3" }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "f1894337eaa8cbb1a139a178ab1bd4b8f88e07c5", version = "0.25.3" }
 
 [build-dependencies]
-uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "fb8dd5c0f9406ea558d0d9d86804f4688ae95e44", version = "0.25.3", features = ["build"] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "f1894337eaa8cbb1a139a178ab1bd4b8f88e07c5", version = "0.25.3", features = ["build"] }
 
 [lib]
 crate-type = ["cdylib"]
