Use different package for each library to avoid class conflicts

--- a/beautyxt_rs_typst/uniffi.toml
+++ b/beautyxt_rs_typst/uniffi.toml
@@ -1,2 +1,2 @@
 [bindings.kotlin]
-package_name = "dev.soupslurpr.beautyxt.bindings"
+package_name = "dev.soupslurpr.beautyxt.beautyxt_rs_typst_bindings"
