--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ beautyxt_rs/upx.exe
 /app/src/main/jniLibs/x86_64/libbeautyxt_rs_typst.so
 /app/src/main/jniLibs/arm64-v8a/libbeautyxt_rs_typst.so
 /beautyxt_rs_plain_text_and_markdown/upx.exe
+/app/release/apk/release/baselineProfiles/0/app-release.dm
+/app/release/apk/release/baselineProfiles/1/app-release.dm
