--- a/beautyxt_rs_typst/about.toml
+++ b/beautyxt_rs_typst/about.toml
@@ -6,6 +6,7 @@ accepted = [
     "BSD-3-Clause",
     "ISC",
     "Unicode-DFS-2016",
+    "Unicode-3.0",
     "NOASSERTION",
     "OFL-1.1",
     "Zlib",
